[package]
name = "delta_rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for incremental storage of data blocks."
documentation = ""
homepage = ""
keywords = ["delta", "incremental storage", "data blocks"]
license = "MIT OR Apache-2.0"
readme = ""
repository = "https://github.com/sonichen/delta_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

 
 
 