[package]
name = "track_rs"
version = "0.1.0"
edition = "2021"
description = "A version control and incremental data storage tool based on Rust,"
documentation = "https://github.com/sonichen/track_rs"
homepage = "https://github.com/sonichen/track_rs"
keywords = ["track", "versions", "delta","incremental"]
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/sonichen/track_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 
 